@@ -1,42 +1,42 @@
 <?xml version="1.0"?>
 <arts format="ascii" version="1">
 <Vector nelem="300">
-15.3680327446031
-69.7721340123035
-46.2145212830292
-64.8470991272377
-221.993383049231
-291.086951102754
-261.741817862983
-163.359128550412
-112.5478308505
-95.8303507066121
-105.910877321414
-278.91340973245
-115.248469022663
-135.128134284681
-154.562733963922
-203.961680297093
-278.874219917086
+15.3687243327947
+69.7728349459965
+46.2158344147889
+64.8503738898521
+221.999784061803
+291.086951102269
+261.746234114795
+163.36517944855
+112.552777916005
+95.8343860398145
+105.914760595106
+278.913733979321
+115.25135016107
+135.130046717827
+154.564199984097
+203.962534294793
+278.874330004314
 291.086967069349
-291.085064594701
-277.763962096677
-244.404534631262
-226.470504454295
-227.829616885129
-242.347996231499
-240.264593139837
-245.994842062455
-255.434169862919
-262.50273002238
-273.634238831498
-284.141066313141
-290.638003845253
+291.085064607776
+277.764066173987
+244.404889966625
+226.470981778018
+227.830073944593
+242.348324187516
+240.264934622877
+245.995139764762
+255.434399352673
+262.502909708877
+273.634345989436
+284.141108291127
+290.638006383096
 291.087001361947
 291.087004550163
-291.075604820513
-291.084039494001
-291.08701324012
+291.075604879187
+291.084039509083
+291.087013240127
 291.087018273889
 291.087021948651
 291.087025721381
