@@ -1,3 +1,12 @@
+2015-06-18  Jana Mendrok  <jana.mendrok@ltu.se>
+
+	* arts-2-3-248
+
+	* controlfiles/artscomponents/arts-xml-data/
+	TestPlanetIsoRatios.[Venus,Mars,Jupiter].y_reference.xml:
+	Corrected reference values (accidentially the previous references
+	corresponded to old line data).
+
 2015-06-18  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-247
